chore: improve tests
Signed-off-by: Marcos Tischer Vallim <tischer@gmail.com>